--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,7 +17,7 @@ galaxy_info:
   # - CC-BY-4.0
   license: BSD-3-Clause
 
-  min_ansible_version: 2.1
+  min_ansible_version: '2.1'
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -42,8 +42,8 @@ galaxy_info:
   platforms:
     - name: FreeBSD
       versions:
-        - 13.0 # noqa schema
-        - 13.1 # noqa schema
+        - '13.0' # noqa schema
+        - '13.1' # noqa schema
 
   galaxy_tags:
     - freebsd
@@ -58,6 +58,9 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies: []
+dependencies:
+  - name: community.general
+    src: https://github.com/ansible-collections/community.general
+    scm: git
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
