--- a/tasks/jail-FreeBSD.yaml
+++ b/tasks/jail-FreeBSD.yaml
@@ -1,7 +1,7 @@
-- name: bsdinstall template script
-  copy:
+- name: Deploy bsdinstall template script
+  ansible.builtin.copy:
     dest: "{{ jail.root.mountpoint }}/.template/{{ jailname }}"
-    mode: 0644
+    mode: '0644'
     content: |
       DISTRIBUTIONS="base.txz"
       export nonInteractive="YES"
@@ -13,8 +13,8 @@
       {% endfor %}
       sysrc defaultrouter={{ jailcfg.defaultrouter }}
       {% set juser = hostvars[jailname].get('ansible_user', jail.user) %}
-      {% set juid  = hostvars[jailname].get('ansible_user_uid','') %}
-      {% set jgecos = hostvars[jailname].get('ansible_user_gecos','') %}
+      {% set juid = hostvars[jailname].get('ansible_user_uid', '') %}
+      {% set jgecos = hostvars[jailname].get('ansible_user_gecos', '') %}
       echo "{{ juser }}:{{ juid }}:::::{{ jgecos }}:::" | adduser -w no -f -
       pkg install -y sudo
       echo "{{ juser }} ALL=(ALL) NOPASSWD: ALL" >/usr/local/etc/sudoers.d/{{ juser }}
@@ -27,22 +27,22 @@
     envi:
       SCRIPT: "{{ jail.root.mountpoint }}/.template/{{ jailname }}"
       BSDINSTALL_DISTSITE: "{{ jail.mirror | default('http://ftp.freebsd.org/') | trim('/') }}/pub/FreeBSD/releases/{{ ansible_machine }}/{{ ansible_architecture }}/{{ ansible_distribution_release | regex_replace('-p\\d+$', '') }}" # noqa yaml[line-length]
-  debug:
+  ansible.builtin.debug:
     var: envi
   tags:
     - ondebug
     - never
 
-- name: bsdinstall jails # noqa command-instead-of-shell
+- name: Run bsdinstall jails # noqa command-instead-of-shell
   # You can't pass environemtn variables using the command module
-  shell: bsdinstall jail "{{ jail.root.mountpoint }}/{{ jailname }}"
+  ansible.builtin.shell: bsdinstall jail "{{ jail.root.mountpoint }}/{{ jailname }}"
   environment:
     SCRIPT: "{{ jail.root.mountpoint }}/.template/{{ jailname }}"
     BSDINSTALL_DISTSITE: "{{ jail.mirror | default('http://ftp.freebsd.org/') | trim('/') }}/pub/FreeBSD/releases/{{ ansible_machine }}/{{ ansible_architecture }}/{{ ansible_distribution_release | regex_replace('-p\\d+$', '') }}" # noqa yaml[line-length]
   args:
     creates: "{{ jail.root.mountpoint }}/{{ jailname }}/bin"
 
-- name: setup network when jail is already running
+- name: Setup network when jail is already running
   community.general.sysrc:
     # jail: parameter works only, if the jail is running. This way, it's 100% sure, the change happens
     path: "{{ jail.root.mountpoint }}/{{ jailname }}/etc/rc.conf"
