--- a/tasks/jail.yaml
+++ b/tasks/jail.yaml
@@ -1,47 +1,47 @@
-- name: debug jailname
-  debug:
+- name: Debug jailname
+  ansible.builtin.debug:
     var: jailname
   tags:
     - debug
     - never
 
-- name: set jail variables from jails hostvars[{{ jailname }}]
-  set_fact:
+- name: Set jail variables from jails hostvars[{{ jailname }}]
+  ansible.builtin.set_fact:
     jailcfg: "{{ hostvars[jailname].get('jail') }}"
 
-- name: load OS specific preparations
-  include_tasks: "pre-{{ jailcfg.os|default('FreeBSD') }}.yaml"
+- name: Load OS specific preparations
+  ansible.builtin.include_tasks: "pre-{{ jailcfg.os | default('FreeBSD') }}.yaml"
 
-- name: debug jailcfg
-  debug:
+- name: Debug jailcfg
+  ansible.builtin.debug:
     var: jailcfg
   tags:
     - debug
     - never
 
-- name: debug parent
-  debug:
+- name: Debug parent
+  ansible.builtin.debug:
     var: ansible_host
   tags:
     - debug
     - never
 
-- name: debug jail
-  debug:
+- name: Debug jail
+  ansible.builtin.debug:
     var: hostvars[jailname]
   tags:
     - debug
     - never
 
-- name: zfs dataset for the jail
-  zfs:
+- name: ZFS dataset for the jail
+  community.general.zfs:
     name: "{{ jail.root.dataset }}/{{ jailname }}"
     extra_zfs_properties:
       quota: "{{ jailcfg.quota | default(omit) }}"
     state: present
 
-- name: per jail specific configuration in jail.conf
-  blockinfile:
+- name: Per jail specific configuration in jail.conf
+  ansible.builtin.blockinfile:
     path: /etc/jail.conf
     marker: "# {mark} ANSIBLE MANAGED: {{ jailname }}"
     block: |
@@ -49,7 +49,7 @@
       {% if jailcfg.hostname is defined %}
         host.hostname = "{{ jailcfg.hostname }}";
       {% endif %}
-      {% for item in jailcfg.get('mounts',[]) %}
+      {% for item in jailcfg.get('mounts', []) %}
       {%  if item is not string %}
         mount += "{{ item[0] }} {{ jail.root.mountpoint }}/{{ jailname }}{{ item[-1] }} nullfs defaults 0 0";
       {%  else %}
@@ -84,29 +84,29 @@
 
 # vnet.interface = "{{ hostvars[jailname].jail.inet }}b";
 
-- name: include OS specific install instructions
-  include_tasks: "jail-{{ jailcfg.os|default('FreeBSD') }}.yaml"
+- name: Include OS specific install instructions
+  ansible.builtin.include_tasks: "jail-{{ jailcfg.os | default('FreeBSD') }}.yaml"
 
-- name: create directories for mount on host side # noqa risky-file-permissions
+- name: Create directories for mount on host side # noqa risky-file-permissions
   # NB.: The directory ownership and permissions could be anything. It should not be hardcoded at this point
-  file:
+  ansible.builtin.file:
     path: "{{ item[0] if item is iterable and item is not string else item }}"
     state: directory
   loop: "{{ jailcfg.mounts }}"
   when: jailcfg.mounts is defined
 
-- name: create directories for mount on jail side # noqa risky-file-permissions
+- name: Create directories for mount on jail side # noqa risky-file-permissions
   # NB.: The directory ownership and permissions could be anything. It should not be hardcoded at this point
-  file:
+  ansible.builtin.file:
     path: "{{ jail.root.mountpoint }}/{{ jailname }}{{ item[1] if item is iterable and item is not string else item }}"
     state: directory
   loop: "{{ jailcfg.mounts }}"
   when: jailcfg.mounts is defined
 
-- name: name resolution in jail
-  copy:
+- name: Name resolution in jail
+  ansible.builtin.copy:
     dest: "{{ jail.root.mountpoint }}/{{ jailname }}/etc/resolv.conf"
-    mode: 0644
+    mode: '0644'
     owner: root
     group: 0
     content: |
@@ -121,7 +121,7 @@
       nameserver {{ jailcfg.ns_server }}
       {% endif %}
 
-- name: add/remove jail to autostart list if needed
+- name: Add/remove jail to autostart list if needed
   community.general.sysrc:
     name: jail_list
     value: "{{ jailname }}"
