--- a/tasks/pre-Devuan.yaml
+++ b/tasks/pre-Devuan.yaml
@@ -1,5 +1,5 @@
-- name: set jail os related facts
-  set_fact:
+- name: Set jail os related facts
+  ansible.builtin.set_fact:
     jailcfg_os: |
       mount.fstab = "/etc/fstab.{{ jailname }}";
       exec.poststart += "ln -fsn /var/lib/misc/log /jails/{{ jailname }}/dev/log";
